Håndter dersom ingen sekvensnummer fra inntektskomponenten ved oppstart av task